src/styles/base.css
* {
  font-family: "Montserrat", sans-serif;
}

body {
  margin: 0;
}

#content {
  background-color: var(--main);
  margin: 0;
  height: 100vh;
  width: 100%;
  display: grid;
  grid-template-columns: 230px 1fr;
  grid-template-rows: 50px 1fr 60px;
  min-width: 355px;
}

header {
  grid-column: 1/3;
  grid-row: 1/2;
  background-color: var(--main);
  display: flex;
  align-items: center;
  font-size: 25px;
  font-weight: 900;
  letter-spacing: 3px;
  margin-left: 20px;
}

.bee-logo {
  content: url(../images/bee-fill.svg);
  width: 25px;
  margin-left: 10px;
}

.main {
  position: relative;
}

.main-container {
  grid-row: 2/3;
  grid-column: 2/3;
  padding: 2rem 8rem;
  overflow-y: auto;
  background-color: var(--main);
  max-width: 80rem;
}

.inactive-main {
  transition: 0.5s;
  min-width: 300px;
}

/* ----- --- Details Modal --- ----- */
.modal {
  position: fixed;
  height: 300px;
  width: 600px;
  max-width: 80%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0);
  border: 2px solid #000;
  border-radius: 5px;
  z-index: 10;
  background-color: var(--main);
  transition: 200ms ease-in-out;
  padding: 10px;
}

.modal.active {
  transform: translate(-50%, -50%) scale(1);
  transition: 200ms ease-in-out;
}

.modal-header {
  padding: 10px 15px;
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid black;
}

.details-title {
  flex: 1;
  font-size: 17px;
  font-weight: 600;
  letter-spacing: 2px;
}

.close-button {
  content: url("../images/close.svg");
  width: 24px;
  transition: 0.2s;
}

.close-button:hover {
  transition: 0.2s;
  content: url("../images/close-empty.svg");
  cursor: pointer;
  transform: scale(1.1);
}

.modal-body {
  padding: 10px 15px;
  display: flex;
  flex-direction: column;
  height: 80%;
}

.details-description {
  height: 80%;
  width: 100%;
  overflow-x: hidden; /* white border on bottom with scroll for some reason */
  padding: 5px;
  letter-spacing: 1px;
}

.date-project-row {
  display: flex;
  justify-content: space-between;
}

.details-bundle {
  display: flex;
  margin-top: 0.5rem;
}

.details-label {
  width: 5rem;
  font-size: 15px;
  font-weight: 600;
  letter-spacing: 2px;
  margin-right: 4px;
}

.details-content {
  letter-spacing: 1px;
  font-size: 13px;
  display: flex;
  align-items: end;
}

/* ----------- Edit Modal ------------- */

.edit-title {
  flex: 1;
  font-size: 16px;
  border: 2px solid rgb(142, 142, 142);
  border-radius: 3px;
  padding-left: 10px;
  height: 22px;
  background-color: transparent;
  letter-spacing: 2px;
  color: rgb(0, 0, 0);
  font-weight: 400;
  transition: 0.2s;
  outline: none;
  margin-right: 2rem;
}

.edit-title:focus {
  border: 2px solid rgb(0, 0, 0);
  outline: none;
  height: 26px;
  transition: 0.2s;
}

.details-bundle input {
  border: 2px solid rgb(142, 142, 142);
  border-radius: 3px;
  padding-left: 10px;
  height: 22px;
  background-color: transparent;
  letter-spacing: 2px;
  color: rgb(0, 0, 0);
  font-weight: 400;
  transition: 0.2s;
  outline: none;
}

.details-bundle input:focus {
  border: 2px solid rgb(0, 0, 0);
  outline: none;
  transition: 0.2s;
}

.details-bundle select {
  border: 2px solid rgb(142, 142, 142);
  border-radius: 3px;
  padding-left: 5px;
  height: 22px;
  background-color: transparent;
  letter-spacing: 2px;
  color: rgb(0, 0, 0);
  font-weight: 400;
  transition: 0.2s;
  outline: none;
}

.edit-label {
  width: 5rem;
  font-size: 15px;
  font-weight: 600;
  letter-spacing: 2px;
  margin-right: 4px;
  display: flex;
  align-items: end;
}

/* -------- ------- end modal styling -------- --------- */
#side-overlay {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 3;
  background-color: rgba(0, 0, 0, 0.222);
  pointer-events: none;
  transition: 200ms ease-in-out;
}

#overlay,
#edit-overlay {
  position: fixed;
  opacity: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 5;
  background-color: rgba(0, 0, 0, 0.485);
  pointer-events: none;
  transition: 200ms ease-in-out;
}

#overlay.active,
#edit-overlay.active,
#side-overlay.active {
  opacity: 1;
  pointer-events: all;
  transition: 200ms ease-in-out;
  backdrop-filter: blur(3px);
}

/* --- If screen too wide --- */
@media only screen and (min-width: 1600px) {
  .main-container {
    padding: 2rem 13rem;
  }
}

@media only screen and (max-width: 900px) {
  /* --- Body Changes --- */
  .container {
    grid-template-columns: 170px 1fr;
  }

  .main-container {
    padding: 2rem;
  }

  /* --- Sidebar Components --- */
  .sidebar {
    font-size: 13px;
  }

  /* --- Card Components --- */
  .title {
    font-size: 12px;
  }

  .due-date {
    font-size: 10px;
  }
}

/* -- mobile nav hidden default -- */
.hidden-nav {
  display: none;
}

/* --- MOBILE --- */
@media only screen and (max-width: 700px) {
  /* Hide regular header */
  header {
    display: none;
  }

  /* --- Nav Bar hidden by default unless on small screen --- */
  .hidden-nav {
    grid-column: 1/3;
    grid-row: 1/2;
    background-color: transparent;
    display: flex;
    align-items: center;
    font-size: 25px;
    font-weight: 900;
    letter-spacing: 3px;
    padding-left: 2rem;
  }

  .burger-menu {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 24px;
    width: 30px;
    margin-right: 10px;
    position: relative;
  }

  .burger-menu:hover {
    cursor: pointer;
  }

  .fa-bars {
    width: 25px;
    height: 3px;
    background-color: #000;
    border-radius: 1px;
    transition: 0.3s;
  }

  /*  -------   -------   ----- 
  *   Property transitions with 
  *   burger.js callback function 
  */

  .burger-active .fa:last-child {
    transition: 0.4s;
    opacity: 0;
  }

  .burger-active .fa:first-child {
    position: absolute;
    left: 1px;
    rotate: 45deg;
    width: 17px;
    transition: 0.3s;
  }

  .burger-active .fa:nth-child(2) {
    position: absolute;
    right: 1px;
    rotate: -45deg;
    width: 17px;
    transition: 0.3s;
  }
  /* ------  ---------- -----*/

  .sidebar {
    transform: translateX(-400px);
    width: 60vw;
    transition: 0.5s;
  }

  #content {
    grid-template-columns: 1fr;
  }

  .main-container {
    grid-column: 1/2;
  }

  /* ---- modal - edit ----- */
  .modal {
    height: 400px;
  }
  .date-project-row {
    flex-direction: column;
  }

  .editButton {
    margin-top: 1rem;
  }

  footer {
    grid-column: 1/3;
  }

  .footer-par {
    margin-left: -5rem;
  }
}

